--- a/apps/updatenotification/package.json
+++ b/apps/updatenotification/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "dev": "webpack --config js-src/webpack.dev.js",
     "watch": "webpack --progress --watch --config js-src/webpack.dev.js",
-    "build": "webpack --progress --hide-modules --config js-src/webpack.prod.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --progress --hide-modules --config js-src/webpack.prod.js"
   },
   "repository": {
     "type": "git",
@@ -29,12 +28,11 @@
     "vue-select": "^2.4.0"
   },
   "devDependencies": {
-    "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "vue-loader": "^15.2.4",
     "vue-template-compiler": "^2.5.16",
-    "webpack": "^4.11.1 ",
+    "webpack": "^4.11.1",
     "webpack-cli": "^3.0.3",
     "webpack-merge": "^4.1.2"
   }
